--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,20 @@ body {
 }
 
 .gameTitle {
-	text-align: center;
+	display: flex;
+    justify-content: center;
+    margin: 1rem 0;
 }
 
 .gameSpace {
 	display: flex;
 	justify-content: space-evenly;
+}
+
+.playAgainButton {
+	display: flex;
+    justify-content: center;
+    margin: 2rem 0 0 0;
 }
 
 .playingCardScene {
